[tool.poetry]
name = "learning-asyncio"
version = "0.1.0"
description = "learning project"
authors = ["Dmitry Lvovich Grachev <grdmitriyl@gmail.com>"]
readme = "README.md"
packages = [{include = "learning_asyncio"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
PySimpleGUI = "^4.60.4"
aiohttp = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
